--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,18 @@
-html, body, {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body {
+    padding-top: 70px;
     font-family: sans-serif, Arial;
-    overflow: hidden;
 }
 
 /*  Toolbar  */
 #toolbox {
     background-color: #BDBDBD;
-    position: fixed;
-    margin: 0px;
     height: 150px;
     width: 100%;
-    bottom: 0px;
     box-sizing: border-box;
-    overflow: scroll;
 }
 
 #stencilArea {
   background-color: #BDBDBD;
-  position: absolute;
   display: flex;
   height: 100px;
   width: 100%;
@@ -34,13 +23,8 @@ html, body, {
 }
 
 #paperArea {
-  overflow: scroll;
-  position: absolute;
-  top: 100px;
-  margin: 0px;
-  min-width: 500px;
-  min-height: 200px;
-  height: 100%;
+
+  height: 500px;
   width: 100%;
 }
 
