use css to style all nodes

--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,26 @@ body {
     font-family: sans-serif, Arial;
 }
 
-.produceNode rect {
+.node rect {
   stroke-width: 1.5;
-  stroke: #00b500;
   fill-opacity: 0.5;
+}
+.produceNode rect {
+  stroke: #00b500;
   }
+
+.contextNode rect {
+  stroke: black;
+}
+
+.nacNode rect {
+  stroke: red;
+}
+
+.constraintNode rect {
+  stroke: black;
+  stroke-dasharray: 2,5;
+}
 
 /*  Toolbar  */
 #toolbox {
