--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 body {
-    padding-top: 70px;
-    font-family: sans-serif, Arial;
+  padding-top: 70px;
+  font-family: sans-serif, Arial;
 }
 
 .node rect {
   stroke-width: 1.5;
   fill-opacity: 0.5;
 }
+
 .produceNode rect {
   stroke: #00b500;
-  }
+}
 
 .contextNode rect {
   stroke: black;
@@ -21,9 +22,8 @@ body {
 
 .constraintNode rect {
   stroke: black;
-  stroke-dasharray: 2,5;
+  stroke-dasharray: 2, 5;
 }
-
 
 #stencilArea {
   background-color: #BDBDBD;
@@ -31,48 +31,44 @@ body {
   width: 100%;
 }
 
-#stencil {
-
-}
+#stencil {}
 
 #paperArea {
   height: 500px;
 }
 
-#paper {
-
-}
+#paper {}
 
 button.deleteBtn {
-    color: white;
-    border: none;
-    background-image: url(../images/delete.png);
-    background-size: 15px 15px;
-    background-repeat: no-repeat;
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
-    text-align: middle;
-    position: absolute;
-    font-weight: bold;
-    cursor: pointer;
+  color: white;
+  border: none;
+  background-image: url(../images/delete.png);
+  background-size: 15px 15px;
+  background-repeat: no-repeat;
+  width: 15px;
+  height: 15px;
+  line-height: 15px;
+  text-align: middle;
+  position: absolute;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 button.addLinkBtn {
-    color: white;
-    border: none;
-    background-image: url(../images/link.png);
-    background-size: 15px 15px;
-    background-repeat: no-repeat;
-    border-radius: 20px;
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
-    text-align: middle;
-    position: absolute;
-    font-weight: bold;
-    cursor: pointer;
-    right: 0px;
+  color: white;
+  border: none;
+  background-image: url(../images/link.png);
+  background-size: 15px 15px;
+  background-repeat: no-repeat;
+  border-radius: 20px;
+  width: 15px;
+  height: 15px;
+  line-height: 15px;
+  text-align: middle;
+  position: absolute;
+  font-weight: bold;
+  cursor: pointer;
+  right: 0px;
 }
 
 button.resizeBtn {
@@ -92,45 +88,43 @@ button.resizeBtn {
   bottom: 0px;
 }
 
-
-
 .btnMenu ul {
-     position: absolute;
-     margin: 1px 0 0 155px;
-     width: 130px;
-     padding: 0px;
-     list-style-type: none;
-     height: auto;
+  position: absolute;
+  margin: 1px 0 0 155px;
+  width: 130px;
+  padding: 0px;
+  list-style-type: none;
+  height: auto;
 }
 
 .btnMenu li {
-     line-height: 25px;
-     width: 135px;
-     padding: 0px 5px 0px 5px;
-     margin: -1px 0 0 0;
-     text-align: left;
-     font-size: 12px;
-     color: black;
-     background-color: #D8D8D8;
-     border-bottom-style: solid;
-     border-bottom-width: 1px;
-     border-top-style: solid;
-     border-top-width: 1px;
-     text-decoration: none;
+  line-height: 25px;
+  width: 135px;
+  padding: 0px 5px 0px 5px;
+  margin: -1px 0 0 0;
+  text-align: left;
+  font-size: 12px;
+  color: black;
+  background-color: #D8D8D8;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  text-decoration: none;
 }
 
 .btnMenu li a:link {
-    display: block;
-    text-align: left;
-    font-size: 12px;
-    color: black;
-    background-color: #D8D8D8;
-    text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 12px;
+  color: black;
+  background-color: #D8D8D8;
+  text-decoration: none;
 }
 
 .btnMenu li:hover {
-    display: block;
-    width: 135px;
-    background-color: #A4A4A4;
-    line-height: 25px;
+  display: block;
+  width: 135px;
+  background-color: #A4A4A4;
+  line-height: 25px;
 }
