--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <a class="navbar-brand" routerLink="/">Semantic TGG Editor</a>
+  <button class="navbar-toggler" type="button"
+          (click)="isNavbarCollapsed = !isNavbarCollapsed"
+          aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="exCollapsingNavbar">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/settings" routerLinkActive="active"><i class="fa fa-fw fa-cogs"></i>
+          Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/help" routerLinkActive="active"><i class="fa fa-fw fa-question-circle"></i>
+          Help</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container" style="padding-top: 20px">
+  <router-outlet></router-outlet>
+</div>
