--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
   <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="exCollapsingNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
+        <a class="nav-link" routerLink="/editor" routerLinkActive="active"><i class="fa fa-fw fa-rupee"></i>
+          Edit Rule</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/settings" routerLinkActive="active"><i class="fa fa-fw fa-cogs"></i>
           Settings</a>
       </li>
@@ -18,6 +22,6 @@
     </ul>
   </div>
 </nav>
-<div class="container" style="padding-top: 20px">
+<div class="container-fluid" style="padding-top: 20px">
   <router-outlet></router-outlet>
 </div>
